first live version

--- a/welcome.html
+++ b/welcome.html
@@ -75,26 +75,26 @@
 			<div class="note">Remember the Queue is temporary. If you close the main tab playing the queue or go to a different address in the tab, the queue will be destroyed. However, there is a delay in destroying the queue, if you have accidently closed the tab or cliked on a link, you can come back to the queue within 5-10 sec or otherwise the queue will be destroyed. :).</div>	
 		<div class="bug">
 			<div class="bug-title"><b>Found a Bug:</b></div>
-			<div class="bug-text">This Extension is in Beta stage and may have bugs. If you find a bug Please <a href="#">Report it Here</a></div>
+			<div class="bug-text">This Extension is in Beta stage and may have bugs. If you find a bug Please <a href="https://chrome.google.com/webstore/support/egplccjedibimkehalgfabhnkeecmmdl">Report it Here</a></div>
 		</div>
 		<div class="share">You can always come back to this page by following the [qTube] link on the top of the playlist UI.<br/> If you like this extension then Rate it and tell your friends about it. </div>	
 		<div class="social">
-			<a href="#">
+			<a href="https://chrome.google.com/webstore/detail/qtube-beta/egplccjedibimkehalgfabhnkeecmmdl">
 				<div class="rate-link">
 					<img src="img/star.png"></img>
 				Rate It
 				</div>
 			</a>
 			<div class="social-link">
-				<iframe src="http://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fchrome.google.com%2Fwebstore%2Fdetail%2Fegplccjedibimkehalgfabhnkeecmmdl%2Fpreview%3Futm_source%3Dchrome-ntp-icon&amp;width=106&amp;layout=button_count&amp;action=like&amp;show_faces=true&amp;share=false&amp;height=21&amp;appId=119643698141744" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:106px; height:21px;" allowTransparency="true"></iframe>
+				<iframe src="http://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fchrome.google.com%2Fwebstore%2Fdetail%2Fqtube-beta%2Fegplccjedibimkehalgfabhnkeecmmdl&amp;width=107&amp;layout=button_count&amp;action=like&amp;show_faces=true&amp;share=false&amp;height=21&amp;appId=119643698141744" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:107px; height:21px;" allowTransparency="true"></iframe>
 			</div>
 			<div class="social-link">
-				<a href="https://twitter.com/share" class="twitter-share-button" data-url="https://chrome.google.com/webstore/detail/egplccjedibimkehalgfabhnkeecmmdl/preview?hl=en-US&gl=IN">Tweet</a>
+				<a href="https://twitter.com/share" class="twitter-share-button" data-url="https://chrome.google.com/webstore/detail/qtube-beta/egplccjedibimkehalgfabhnkeecmmdl">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 			</div>
 			<div class="social-link">
 				<!-- Place this tag where you want the +1 button to render. -->
-<div class="g-plusone" data-href="https://chrome.google.com/webstore/detail/egplccjedibimkehalgfabhnkeecmmdl/preview?hl=en-US&amp;gl=IN"></div>
+<div class="g-plusone" data-href="https://chrome.google.com/webstore/detail/qtube-beta/egplccjedibimkehalgfabhnkeecmmdl"></div>
 
 <!-- Place this tag after the last +1 button tag. -->
 <script type="text/javascript">
