--- a/welcome.html
+++ b/welcome.html
@@ -90,19 +90,15 @@
 			</div>
 			<div class="social-link">
 				<a href="https://twitter.com/share" class="twitter-share-button" data-url="https://chrome.google.com/webstore/detail/qtube-beta/egplccjedibimkehalgfabhnkeecmmdl">Tweet</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+<script></script>
 			</div>
 			<div class="social-link">
 				<!-- Place this tag where you want the +1 button to render. -->
 <div class="g-plusone" data-href="https://chrome.google.com/webstore/detail/qtube-beta/egplccjedibimkehalgfabhnkeecmmdl"></div>
 
 <!-- Place this tag after the last +1 button tag. -->
-<script type="text/javascript">
-  (function() {
-    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-    po.src = 'https://apis.google.com/js/platform.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-  })();
+<script type="text/javascript" src="social.js">
+  
 </script>
 			</div>
 		</div>	
