--- a/welcome.html
+++ b/welcome.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<script type="text/javascript" src="social.js"></script>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>Getting Started | qTube</title>
 	<link href="./css/welcome.css" rel="stylesheet" type="text/css">
 	
 </head>
 
-<body class="nav_products sn_whats_new evernote-webclipper-extension evernote-clearly-extension" data-lang="en" data-country="IN">
+<body class="nav_products sn_whats_new" data-lang="en" data-country="IN">
 	<div id="container">
 		<div id="container2">
 			<div id="colwrap">
@@ -86,20 +87,17 @@
 				</div>
 			</a>
 			<div class="social-link">
-				<iframe src="http://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fchrome.google.com%2Fwebstore%2Fdetail%2Fqtube-beta%2Fegplccjedibimkehalgfabhnkeecmmdl&amp;width=107&amp;layout=button_count&amp;action=like&amp;show_faces=true&amp;share=false&amp;height=21&amp;appId=119643698141744" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:107px; height:21px;" allowTransparency="true"></iframe>
+				<iframe src="http://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2FQtubeChrome&amp;width=107&amp;layout=button_count&amp;action=like&amp;show_faces=true&amp;share=false&amp;height=21&amp;appId=119643698141744" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:107px; height:21px;" allowTransparency="true"></iframe>
 			</div>
 			<div class="social-link">
 				<a href="https://twitter.com/share" class="twitter-share-button" data-url="https://chrome.google.com/webstore/detail/qtube-beta/egplccjedibimkehalgfabhnkeecmmdl">Tweet</a>
-<script></script>
 			</div>
 			<div class="social-link">
 				<!-- Place this tag where you want the +1 button to render. -->
 <div class="g-plusone" data-href="https://chrome.google.com/webstore/detail/qtube-beta/egplccjedibimkehalgfabhnkeecmmdl"></div>
 
 <!-- Place this tag after the last +1 button tag. -->
-<script type="text/javascript" src="social.js">
-  
-</script>
+
 			</div>
 		</div>	
 		</div><!-- /whats_new_content -->
